# JHRIS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  constants.py  database.py  demo.py  department.py  docker-compose.yml  employee.py  jhris.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  test_jhris.py  validation.py
alembic/: env.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/auth/: router.py  schemas.py  service.py  utils.py
app/departments/: models.py  router.py  schemas.py  service.py
app/employees/: models.py  router.py  schemas.py  service.py
app/positions/: models.py  router.py  schemas.py  service.py
app/users/: models.py  router.py  schemas.py  service.py
backend/: package-lock.json  package.json
backend/src/: index.js
backend/src/config/: database.js
backend/src/controllers/: attendanceController.js  authController.js  employeeController.js  leaveController.js
backend/src/middleware/: auth.js
backend/src/routes/: attendance.js  auth.js  employees.js  leave.js
docs/: PRODUCTION.md  README.md
frontend/: package.json
frontend/public/: index.html
frontend/public/css/: style.css
frontend/public/js/: app.js
tests/: conftest.py  test_auth.py  test_departments.py  test_employees.py
